--- a/package.json
+++ b/package.json
@@ -1,8 +1,7 @@
 {
-  "name": "ember-intl-test",
+  "name": "ember-intl-example",
   "version": "0.0.0",
-  "description": "Small description for ember-intl-test goes here",
-  "private": true,
+  "description": "Small description for ember-intl-example goes here",
   "directories": {
     "doc": "doc",
     "test": "tests"
@@ -25,6 +24,7 @@
     "ember-cli-babel": "^5.0.0",
     "ember-cli-content-security-policy": "0.4.0",
     "ember-cli-dependency-checker": "^1.0.0",
+    "ember-cli-document-title": "0.1.0",
     "ember-cli-htmlbars": "0.7.6",
     "ember-cli-ic-ajax": "0.1.1",
     "ember-cli-inject-live-reload": "^1.3.0",
@@ -32,6 +32,7 @@
     "ember-cli-uglify": "^1.0.1",
     "ember-data": "1.0.0-beta.18",
     "ember-disable-proxy-controllers": "^1.0.0",
-    "ember-export-application-global": "^1.0.2"
+    "ember-export-application-global": "^1.0.2",
+    "ember-intl": "2.0.0-beta.11"
   }
 }
