--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "ember-cli-dependency-checker": "^1.0.0",
     "ember-cli-document-title": "0.1.0",
     "ember-cli-htmlbars": "0.7.6",
+    "ember-cli-htmlbars-inline-precompile": "0.2.0",
     "ember-cli-ic-ajax": "0.1.1",
     "ember-cli-inject-live-reload": "^1.3.0",
     "ember-cli-qunit": "0.3.13",
@@ -33,6 +34,6 @@
     "ember-data": "1.0.0-beta.18",
     "ember-disable-proxy-controllers": "^1.0.0",
     "ember-export-application-global": "^1.0.2",
-    "ember-intl": "2.0.0-beta.11"
+    "ember-intl": "*"
   }
 }
