adding more examples

--- a/package.json
+++ b/package.json
@@ -35,5 +35,8 @@
     "ember-disable-proxy-controllers": "^1.0.0",
     "ember-export-application-global": "^1.0.2",
     "ember-intl": "*"
+  },
+  "dependencies": {
+    "ember-code-snippet": "^1.1.0"
   }
 }
