--- a/package.json
+++ b/package.json
@@ -35,7 +35,7 @@
     "ember-data": "1.0.0-beta.18",
     "ember-disable-proxy-controllers": "^1.0.0",
     "ember-export-application-global": "^1.0.2",
-    "ember-intl": "*"
+    "ember-intl": "2.0.0-beta.11"
   },
   "dependencies": {
     "ember-code-snippet": "^1.1.0"
