--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
   },
   "repository": "",
   "engines": {
-    "node": ">= 0.10.0"
+    "node": ">= 0.12.0"
   },
   "author": "",
   "license": "MIT",
@@ -22,22 +22,17 @@
     "ember-cli": "0.2.7",
     "ember-cli-app-version": "0.3.3",
     "ember-cli-babel": "^5.0.0",
-    "ember-cli-content-security-policy": "0.4.0",
     "ember-cli-dependency-checker": "^1.0.0",
-    "ember-cli-document-title": "0.1.0",
     "ember-cli-github-pages": "0.0.6",
     "ember-cli-htmlbars": "0.7.6",
     "ember-cli-htmlbars-inline-precompile": "0.2.0",
-    "ember-cli-ic-ajax": "0.1.1",
     "ember-cli-inject-live-reload": "^1.3.0",
     "ember-cli-qunit": "0.3.13",
-    "ember-cli-uglify": "^1.0.1",
-    "ember-data": "1.0.0-beta.18",
-    "ember-disable-proxy-controllers": "^1.0.0",
-    "ember-export-application-global": "^1.0.2",
-    "ember-intl": "2.0.0-beta.11"
+    "ember-disable-proxy-controllers": "^1.0.0"
   },
   "dependencies": {
-    "ember-code-snippet": "^1.1.0"
+    "ember-code-snippet": "^1.1.0",
+    "ember-cli-document-title": "0.1.0",
+    "ember-intl": "2.0.0-beta.11"
   }
 }
