--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "ember-intl-example",
   "version": "0.0.0",
+  "private": true,
   "description": "Small description for ember-intl-example goes here",
   "directories": {
     "doc": "doc",
