--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "ember-intl-example",
   "version": "0.0.0",
-  "private": true,
   "description": "Small description for ember-intl-example goes here",
+  "private": true,
   "directories": {
     "doc": "doc",
     "test": "tests"
@@ -14,25 +14,28 @@
   },
   "repository": "",
   "engines": {
-    "node": ">= 0.12.0"
+    "node": ">= 0.10.0"
   },
   "author": "",
   "license": "MIT",
   "devDependencies": {
     "broccoli-asset-rev": "^2.0.2",
-    "ember-cli": "0.2.7",
-    "ember-cli-app-version": "0.3.3",
+    "ember-cli": "1.13.6",
+    "ember-cli-app-version": "0.4.0",
     "ember-cli-babel": "^5.0.0",
-    "ember-cli-github-pages": "0.0.6",
-    "ember-cli-htmlbars": "0.7.6",
-    "ember-cli-htmlbars-inline-precompile": "0.2.0",
-    "ember-cli-inject-live-reload": "^1.3.0",
-    "ember-cli-qunit": "0.3.13",
-    "ember-disable-proxy-controllers": "^1.0.0"
-  },
-  "dependencies": {
+    "ember-cli-content-security-policy": "0.4.0",
+    "ember-cli-dependency-checker": "^1.0.0",
     "ember-cli-document-title": "0.1.0",
-    "ember-code-snippet": "^1.1.0",
-    "ember-intl": "2.0.0-beta.12"
+    "ember-cli-htmlbars": "0.7.9",
+    "ember-cli-htmlbars-inline-precompile": "^0.1.1",
+    "ember-cli-inject-live-reload": "^1.3.0",
+    "ember-cli-qunit": "0.3.18",
+    "ember-cli-release": "0.2.3",
+    "ember-cli-sri": "^1.0.1",
+    "ember-cli-uglify": "^1.0.1",
+    "ember-code-snippet": "1.1.0",
+    "ember-disable-proxy-controllers": "^1.0.0",
+    "ember-export-application-global": "^1.0.3",
+    "ember-intl": "2.0.0-beta.15"
   }
 }
