--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "ember-cli-content-security-policy": "0.4.0",
     "ember-cli-dependency-checker": "^1.0.0",
     "ember-cli-document-title": "0.1.0",
+    "ember-cli-github-pages": "0.0.6",
     "ember-cli-htmlbars": "0.7.9",
     "ember-cli-htmlbars-inline-precompile": "^0.1.1",
     "ember-cli-inject-live-reload": "^1.3.0",
