--- a/package.json
+++ b/package.json
@@ -35,9 +35,9 @@
     "ember-cli-release": "0.2.3",
     "ember-cli-sri": "^1.0.1",
     "ember-cli-uglify": "^1.0.1",
-    "ember-code-snippet": "1.1.0",
+    "ember-code-snippet": "^1.1.0",
     "ember-disable-proxy-controllers": "^1.0.0",
     "ember-export-application-global": "^1.0.3",
-    "ember-intl": "2.0.0-beta.19"
+    "ember-intl": "2.9.3"
   }
 }
